<resources>
    <string name="app_name">DeepFeel</string>
    <string name="text_recognition_string">Text Recognition</string>
    <string name="camera_description">camera take image</string>
    <string name="text_view_text_recognition">recognized text</string>
    <string name="image_text_recognition_desc">image text recognition description</string>
    <string name="gallery_description">gallery image</string>
    <string name="title_activity_image_labeling">ImageLabeling</string>
    <string name="label_hobbies">Hobbiees</string>
    <string name="label_add_log">Add Log</string>
    <string name="label_analytics">Analytics</string>
    <string name="label_location">Location</string>
    <string name="label_reports">Reports</string>
    <string name="label_face_reports">Your Face Reports</string>
    <string name="label_favorite_hobbies">what are your favorite hobbies?</string>
    <string name="label_hobby_1">Top 1 hobby</string>
    <string name="label_hobby_2">second favorite hobby</string>
    <string name="label_hobby_3">3rd favorite hobby</string>
    <string name="label_done">Done</string>
    <string name="label_next">Next</string>
    <string name="label_rate">Rate your feeling today</string>

    <string name="label_rate_1">complete depression</string>
    <string name="label_rate_2">little depressed</string>
    <string name="label_rate_3">i\'ve been better</string>
    <string name="label_rate_4">i\'m feeling ok</string>
    <string name="label_rate_5">not that bad</string>
    <string name="label_rate_6">i\'m ok</string>
    <string name="label_rate_7">i feel good</string>
    <string name="label_rate_8">i feel great</string>
    <string name="label_rate_9">i feel fantastic</string>
    <string name="label_rate_10">this is my lucy day</string>
    <string name="label_average_emotion">Average Emotion</string>
    <string name="label_eye_opening">Eye Opening</string>
    <string name="label_happines">Happiness</string>
    <string name="label_history_emotion">History of your emotion</string>
    <string name="label_recommendations">Recommendations</string>
    <string name="label_idea">What an idea for you? try:</string>
    <string name="label_random">Random String</string>

    <string name="label_msg_1">"Happiness is when what you think, what you say, and what you do are in harmony." —Mahatma Gandhi </string>
    <string name="label_msg_2">"There is only one happiness in this life, to love and be loved." —George Sand </string>
    <string name="label_msg_3">"Be happy for this moment. This moment is your life." —Omar Khayyam</string>
    <string name="label_msg_4">"Happiness lies in the joy of achievement and the thrill of creative effort." —Franklin D. Roosevelt</string>
    <string name="label_msg_5">"Be kind whenever possible. It is always possible." —The Dalai Lama</string>
    <string name="label_msg_6">"Adopt the pace of nature: Her secret is patience." —Ralph Waldo Emerson</string>
    <string name="label_msg_7">"Spread love everywhere you go. Let no one ever come to you without leaving happier." —Mother Theresa</string>
    <string name="label_msg_8">"Resolve to keep happy, and your joy and you shall form an invincible host against difficulties." —Helen Keller</string>
    <string name="label_msg_9">"The present moment is filled with joy and happiness. If you are attentive, you will see it." —Thich Nhat Hanh</string>
    <string name="label_msg_10">"Action may not always bring happiness, but there is no happiness without action." —William James </string>
</resources>
