<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.AnalyticsActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:srcCompat="@drawable/ic_round_account_box_24"
                    android:id="@+id/iv_thumb" />

            <TextView
                    android:text="@string/label_reports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:id="@+id/textView"
                    android:textStyle="bold"
                    android:textSize="20sp" />

            <TextView
                    android:text="@string/label_face_reports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:id="@+id/textView6"
                    android:textAlignment="textEnd"
                    android:textStyle="bold" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_height="match_parent">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1">

                    <TextView
                            android:text="@string/label_average_emotion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />

                    <TextView
                            android:text="TextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_average_emotion"
                            android:gravity="center"
                            android:layout_marginTop="16dp" />

                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
                            android:id="@+id/cpbEmotion"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            app:cpb_background_progressbar_color="@color/light_grey"
                            app:cpb_background_progressbar_width="5dp"
                            app:cpb_progress_direction="to_right"
                            app:cpb_progressbar_color="@color/light_green"
                            app:cpb_progressbar_width="5dp"
                            app:cpb_round_border="false"
                            android:layout_marginTop="16dp" />
                </LinearLayout>

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1">

                    <TextView
                            android:text="@string/label_eye_opening"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />

                    <TextView
                            android:text="TextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_eye_opening"
                            android:gravity="center"
                            android:layout_marginTop="16dp" />

                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
                            android:id="@+id/cpbEye"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            app:cpb_background_progressbar_color="@color/light_grey"
                            app:cpb_background_progressbar_width="5dp"
                            app:cpb_progress_direction="to_right"
                            app:cpb_progressbar_color="@color/light_red"
                            app:cpb_progressbar_width="5dp"
                            app:cpb_round_border="false"
                            android:layout_marginTop="16dp" />
                </LinearLayout>

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1">

                    <TextView
                            android:text="@string/label_happines"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />

                    <TextView
                            android:text="TextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_happieness"
                            android:gravity="center"
                            android:layout_marginTop="16dp" />

                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
                            android:id="@+id/cpbHappiness"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            app:cpb_background_progressbar_color="@color/light_grey"
                            app:cpb_background_progressbar_width="5dp"
                            app:cpb_progress_direction="to_right"
                            app:cpb_progressbar_color="@color/light_blue"
                            app:cpb_progressbar_width="5dp"
                            app:cpb_round_border="false"
                            android:layout_marginTop="16dp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                    android:text="@string/label_history_emotion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:id="@+id/textView4"
                    android:textAlignment="textEnd"
                    android:textStyle="bold" />
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black"/>

            <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/barChart"
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_height="150dp" />


            <TextView
                    android:text="@string/label_recommendations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAlignment="textEnd"
                    android:textStyle="bold" />
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black"/>

            <VideoView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/videoView" />

            <TextView
                    android:text="@string/label_idea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAlignment="textEnd"
                    android:textStyle="bold" />
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black"/>

            <TextView
                    android:text="@string/label_random"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:id="@+id/tv_random" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="54dp">

        <Button
                android:text="@string/label_hobbies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b_hobby"
                android:layout_weight="1"
                android:backgroundTint="@color/yellow"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="12sp" />

        <Button
                android:text="@string/label_add_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b_add_log"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="12sp" />

        <Button
                android:text="@string/label_analytics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="12sp" />

        <Button

                android:text="@string/label_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b_location"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>